@@ -1,5 +1,11 @@
 2024-08-07  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode.el (ebuild-mode-get-builddir): New function, split
+	off from ebuild-mode-find-workdir.
+	(ebuild-mode-find-s): New function.
+	(ebuild-mode-map, ebuild-mode-menu): Keybinding and menu entry.
+	* ebuild-mode.texi (ebuild-mode): Document ebuild-mode-find-s.
+
 	* ebuild-mode.el (ebuild-mode-find-workdir): Let-bind
 	find-file-run-dired to t.
 
